# FwDebian

./: .gitattributes  .gitignore  CMakeLists.txt  README  TODO  changelog  changelog.in  control  control.in  copyright  fieldworks-applications.config  fieldworks-applications.install  fieldworks-applications.postinst  fieldworks-applications.postrm  fieldworks-applications.preinst  fieldworks-applications.prerm  fieldworks-applications.templates  fieldworks-examples.install  fieldworks-l10n-ar.install  fieldworks-l10n-az.install  fieldworks-l10n-bn.install  fieldworks-l10n-de.install  fieldworks-l10n-es.install  fieldworks-l10n-fa.install  fieldworks-l10n-fr.install  fieldworks-l10n-hi.install  fieldworks-l10n-hu.install  fieldworks-l10n-id.install  fieldworks-l10n-km.install  fieldworks-l10n-ko.install  fieldworks-l10n-ms.install  fieldworks-l10n-my.install  fieldworks-l10n-ne.install  fieldworks-l10n-pt.install  fieldworks-l10n-ro.install  fieldworks-l10n-ru.install  fieldworks-l10n-rw.install  fieldworks-l10n-sw.install  fieldworks-l10n-ta.install  fieldworks-l10n-te.install  (+21 more)
po/: POTFILES.in  templates.pot
source/: options
